@startuml
' UML Diagram for Backend (Auto-generated)

package "Models" {
  class Asset {
    +id: number
    +assetCode: string
    +name: string
    +category: string
    +type: AssetType
    +status: AssetStatus
    +condition: AssetCondition
    +location: string
    +purchaseDate: Date
    ...
  }
  class Borrowing {
    +id: number
    +borrowingCode: string
    +assetId: number
    +assetType: AssetType
    +userId: number
    +borrowDate: Date
    +dueDate: Date
    +returnDate: Date
    +status: BorrowingStatus
    +purpose: string
    ...
  }
  class Maintenance {
    +id: number
    +maintenanceCode: string
    +assetId: number
    +assetType: AssetType
    +type: MaintenanceType
    +status: MaintenanceStatus
    +scheduledDate: Date
    +completedDate: Date
    ...
  }
  class MaintenanceHistory {
    +id: number
    +maintenanceId: number
    +assetId: number
    +type: MaintenanceType
    +status: MaintenanceStatus
    +scheduledDate: Date
    +completedDate: Date
    ...
  }
  class User {
    +id: number
    +nip: string
    +name: string
    +email: string
    +role: string
    ...
  }
}

package "Controllers" {
  class AssetController
  class BorrowingController
  class MaintenanceController
  class MaintenanceHistoryController
  class UserController
}

package "Services" {
  class AssetService
  class BorrowingService
  class MaintenanceService
  class MaintenanceHistoryService
  class UserService
}

Asset "1" -- "*" Borrowing : digunakan
Asset "1" -- "*" Maintenance : dipelihara
Maintenance "1" -- "*" MaintenanceHistory : memiliki riwayat
User "1" -- "*" Borrowing : meminjam
User "1" -- "*" MaintenanceHistory : membuat/validasi

AssetController ..> AssetService
BorrowingController ..> BorrowingService
MaintenanceController ..> MaintenanceService
MaintenanceHistoryController ..> MaintenanceHistoryService
UserController ..> UserService

@enduml
